--- a/SWP_BL5_TEAM1/nbproject/private/private.properties
+++ b/SWP_BL5_TEAM1/nbproject/private/private.properties
@@ -3,4 +3,7 @@ file.reference.activation-1.1.1_1.jar=D:\\Java Projects\\SWP391_E1_BL5_Group1_Cl
 j2ee.server.domain=C:/Program Files/Apache Software Foundation/apache-tomcat-10.1.40
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat102
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat102
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\19\\build.properties
