--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -47,13 +47,13 @@ file.reference.jackson-annotations-3.0-rc3.jar=..\\lib_jar\\jackson-annotations-
 file.reference.jackson-core-2.19.0-rc2.jar=..\\lib_jar\\jackson-core-2.19.0-rc2.jar
 file.reference.jackson-databind-2.18.3.jar=..\\lib_jar\\jackson-databind-2.18.3.jar
 file.reference.jackson-databind-2.19.0-rc2.jar=..\\lib_jar\\jackson-databind-2.19.0-rc2.jar
-file.reference.jakarta.jakartaee-api-8.0.0.jar=..\\lib_jar\\jakarta.jakartaee-api-8.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javase-3.5.3.jar=..\\lib_jar\\javase-3.5.3.jar
 file.reference.javax.activation-1.2.0.jar=..\\lib_jar\\javax.activation-1.2.0.jar
 file.reference.javax.mail-1.6.2.jar=..\\lib_jar\\javax.mail-1.6.2.jar
 file.reference.javax.mail-api-1.6.2.jar=..\\lib_jar\\javax.mail-api-1.6.2.jar
+file.reference.javax.mail.jar=..\\lib_jar\\javax.mail.jar
 file.reference.javax.servlet-api-3.0.1.jar=..\\lib_jar\\javax.servlet-api-3.0.1.jar
 file.reference.jaxb-api-2.1.jar=..\\lib_jar\\jaxb-api-2.1.jar
 file.reference.jaxb-api-2.3.1.jar=..\\lib_jar\\jaxb-api-2.3.1.jar
@@ -102,13 +102,13 @@ javac.classpath=\
     ${file.reference.jackson-core-2.19.0-rc2.jar}:\
     ${file.reference.jackson-databind-2.18.3.jar}:\
     ${file.reference.jackson-databind-2.19.0-rc2.jar}:\
-    ${file.reference.jakarta.jakartaee-api-8.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.javase-3.5.3.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail-1.6.2.jar}:\
     ${file.reference.javax.mail-api-1.6.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.javax.servlet-api-3.0.1.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
