--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>queueRecordController</servlet-name>
         <servlet-class>controller.staff.queueRecordController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ManagerTimeSlotListServlet</servlet-name>
+        <servlet-class>controller.manager.ManagerTimeSlotListServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <url-pattern>/PatientBookAppointmentServlet</url-pattern>
@@ -57,9 +61,15 @@
         <url-pattern>/DeleteAppointmentServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>UpdateAppointmentServlet</servlet-name>
-        <url-pattern>/UpdateAppointmentServlet</url-pattern>
         <servlet-name>queueRecordController</servlet-name>
         <url-pattern>/queueRecordController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateAppointmentServlet</servlet-name>
+        <url-pattern>/UpdateAppointmentServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ManagerTimeSlotListServlet</servlet-name>
+        <url-pattern>/ManagerTimeSlotListServlet</url-pattern>
     </servlet-mapping>
 </web-app>
