--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>ManagerTimeSlotListServlet</servlet-name>
         <servlet-class>controller.manager.ManagerTimeSlotListServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>QueueManager</servlet-name>
+        <servlet-class>controller.doctor.QueueManager</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <url-pattern>/PatientBookAppointmentServlet</url-pattern>
@@ -59,5 +63,9 @@
     <servlet-mapping>
         <servlet-name>ExaminationPackageManager</servlet-name>
         <url-pattern>/ExaminationPackageManager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>QueueManager</servlet-name>
+        <url-pattern>/QueueManager</url-pattern>
     </servlet-mapping>
 </web-app>
