--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -23,10 +23,11 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.activation-1.1.1.jar=..\\lib_jar\\activation-1.1.1.jar
-file.reference.com.fasterxml.jackson.core.jar.zip=..\\lib_jar\\com.fasterxml.jackson.core.jar
-file.reference.com.fasterxml.jackson.databind.jar.zip=..\\lib_jar\\com.fasterxml.jackson.databind.jar
+file.reference.com.fasterxml.jackson.core.jar=..\\lib_jar\\com.fasterxml.jackson.core.jar
+file.reference.com.fasterxml.jackson.databind.jar=..\\lib_jar\\com.fasterxml.jackson.databind.jar
 file.reference.commons-collections4-4.1.jar=..\\lib_jar\\commons-collections4-4.1.jar
 file.reference.commons-fileupload2-core-2.0.0-M2.jar=..\\lib_jar\\commons-fileupload2-core-2.0.0-M2.jar
 file.reference.commons-logging-1.2.jar=..\\lib_jar\\commons-logging-1.2.jar
@@ -47,6 +48,7 @@ file.reference.jackson-annotations-3.0-rc3.jar=..\\lib_jar\\jackson-annotations-
 file.reference.jackson-core-2.19.0-rc2.jar=..\\lib_jar\\jackson-core-2.19.0-rc2.jar
 file.reference.jackson-databind-2.18.3.jar=..\\lib_jar\\jackson-databind-2.18.3.jar
 file.reference.jackson-databind-2.19.0-rc2.jar=..\\lib_jar\\jackson-databind-2.19.0-rc2.jar
+file.reference.jakarta.jakartaee-api-8.0.0.jar=..\\lib_jar\\jakarta.jakartaee-api-8.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javase-3.5.3.jar=..\\lib_jar\\javase-3.5.3.jar
@@ -72,17 +74,15 @@ includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
-
-j2ee.platform=1.5
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.9-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote-ffm.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
-
+j2ee.platform=10-web
+j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-ssi.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.27.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-cs.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar:${j2ee.server.home}/lib/websocket-client-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.com.fasterxml.jackson.core.jar.zip}:\
-    ${file.reference.com.fasterxml.jackson.databind.jar.zip}:\
+    ${file.reference.com.fasterxml.jackson.core.jar}:\
+    ${file.reference.com.fasterxml.jackson.databind.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.commons-fileupload2-core-2.0.0-M2.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
@@ -103,6 +103,7 @@ javac.classpath=\
     ${file.reference.jackson-core-2.19.0-rc2.jar}:\
     ${file.reference.jackson-databind-2.18.3.jar}:\
     ${file.reference.jackson-databind-2.19.0-rc2.jar}:\
+    ${file.reference.jakarta.jakartaee-api-8.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.javase-3.5.3.jar}:\
@@ -148,7 +149,6 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -166,116 +166,4 @@ war.content.additional=
 war.ear.name=${war.name}
 war.name=SWP_BL5_TEAM1.war
 web.docbase.dir=web
-dist.javadoc.dir=${dist.dir}/javadoc
-file.reference.gson-2.9.0.jar=..\\lib_jar\\gson-2.9.0.jar
-javadoc.preview=true
-file.reference.mysql-connector-java-8.0.17.jar=..\\lib_jar\\mysql-connector-java-8.0.17.jar
-j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar\:${j2ee.server.home}/lib/annotations-api.jar\:${j2ee.server.home}/lib/catalina-ant.jar\:${j2ee.server.home}/lib/catalina-ha.jar\:${j2ee.server.home}/lib/catalina-ssi.jar\:${j2ee.server.home}/lib/catalina-storeconfig.jar\:${j2ee.server.home}/lib/catalina-tribes.jar\:${j2ee.server.home}/lib/catalina.jar\:${j2ee.server.home}/lib/ecj-4.27.jar\:${j2ee.server.home}/lib/el-api.jar\:${j2ee.server.home}/lib/jakartaee-migration-1.0.7-shaded.jar\:${j2ee.server.home}/lib/jasper-el.jar\:${j2ee.server.home}/lib/jasper.jar\:${j2ee.server.home}/lib/jaspic-api.jar\:${j2ee.server.home}/lib/jsp-api.jar\:${j2ee.server.home}/lib/servlet-api.jar\:${j2ee.server.home}/lib/tomcat-api.jar\:${j2ee.server.home}/lib/tomcat-coyote.jar\:${j2ee.server.home}/lib/tomcat-dbcp.jar\:${j2ee.server.home}/lib/tomcat-i18n-cs.jar\:${j2ee.server.home}/lib/tomcat-i18n-de.jar\:${j2ee.server.home}/lib/tomcat-i18n-es.jar\:${j2ee.server.home}/lib/tomcat-i18n-fr.jar\:${j2ee.server.home}/lib/tomcat-i18n-ja.jar\:${j2ee.server.home}/lib/tomcat-i18n-ko.jar\:${j2ee.server.home}/lib/tomcat-i18n-pt-BR.jar\:${j2ee.server.home}/lib/tomcat-i18n-ru.jar\:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar\:${j2ee.server.home}/lib/tomcat-jdbc.jar\:${j2ee.server.home}/lib/tomcat-jni.jar\:${j2ee.server.home}/lib/tomcat-util-scan.jar\:${j2ee.server.home}/lib/tomcat-util.jar\:${j2ee.server.home}/lib/tomcat-websocket.jar\:${j2ee.server.home}/lib/websocket-api.jar\:${j2ee.server.home}/lib/websocket-client-api.jar
-annotation.processing.enabled=true
-file.reference.commons-logging-1.2.jar=..\\lib_jar\\commons-logging-1.2.jar
-java.source.based=true
-file.reference.jackson-databind-2.18.3.jar=..\\lib_jar\\jackson-databind-2.18.3.jar
-file.reference.com.fasterxml.jackson.databind.jar=..\\lib_jar\\com.fasterxml.jackson.databind.jar
-javac.source=17
-javadoc.use=true
-annotation.processing.enabled.in.editor=true
-javadoc.notree=false
-file.reference.commons-collections4-4.1.jar=..\\lib_jar\\commons-collections4-4.1.jar
-file.reference.jackson-core-2.19.0-rc2.jar=..\\lib_jar\\jackson-core-2.19.0-rc2.jar
-no.dependencies=false
-javadoc.additionalparam=
-file.reference.activation-1.1.1.jar=..\\lib_jar\\activation-1.1.1.jar
-j2ee.compile.on.save=true
-file.reference.google-auth-library-credentials-1.33.1.jar=..\\lib_jar\\google-auth-library-credentials-1.33.1.jar
-javac.debug=true
-file.reference.mail.jar=..\\lib_jar\\mail.jar
-j2ee.copy.static.files.on.save=true
-file.reference.SWP_BL5_TEAM1-test=test
-compile.jsps=false
-build.classes.dir=${build.web.dir}/WEB-INF/classes
-javadoc.windowtitle=
-file.reference.javax.activation-1.2.0.jar=..\\lib_jar\\javax.activation-1.2.0.jar
-runmain.jvmargs=
-file.reference.jaxb-api-2.3.1.jar=..\\lib_jar\\jaxb-api-2.3.1.jar
-j2ee.deploy.on.save=true
-test.test.dir=${file.reference.SWP_BL5_TEAM1-test}
-build.web.dir=${build.dir}/web
-dist.dir=dist
-build.dir=build
-file.reference.commons-fileupload2-core-2.0.0-M2.jar=..\\lib_jar\\commons-fileupload2-core-2.0.0-M2.jar
-file.reference.google-http-client-1.46.3.jar=..\\lib_jar\\google-http-client-1.46.3.jar
-file.reference.poi-3.15.jar=..\\lib_jar\\poi-3.15.jar
-file.reference.smtp-1.6.2.jar=..\\lib_jar\\smtp-1.6.2.jar
-dist.ear.war=${dist.dir}/${war.ear.name}
-javadoc.version=false
-debug.test.classpath=${run.test.classpath}
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.src-java=src/java
-javac.target=17
-platform.active=JDK_17
-javac.test.processorpath=${javac.test.classpath}
-file.reference.javax.mail-1.6.2.jar=..\\lib_jar\\javax.mail-1.6.2.jar
-file.reference.json-20210307.jar=..\\lib_jar\\json-20210307.jar
-javac.processorpath=${javac.classpath}
-persistence.xml.dir=${conf.dir}
-file.reference.httpcore-4.4.13.jar=..\\lib_jar\\httpcore-4.4.13.jar
-file.reference.httpclient-4.5.13.jar=..\\lib_jar\\httpclient-4.5.13.jar
-build.web.excludes=${build.classes.excludes}
-conf.dir=src/conf
-source.root=.
-file.reference.javax.servlet-api-3.0.1.jar=..\\lib_jar\\javax.servlet-api-3.0.1.jar
-javac.compilerargs=
-javadoc.noindex=false
-file.reference.javax.mail-api-1.6.2.jar=..\\lib_jar\\javax.mail-api-1.6.2.jar
-file.reference.xmlbeans-2.3.0.jar=..\\lib_jar\\xmlbeans-2.3.0.jar
-javadoc.private=false
-display.browser=true
-javadoc.author=false
-endorsed.classpath=
-file.reference.google-auth-library-oauth2-http-1.33.1.jar=..\\lib_jar\\google-auth-library-oauth2-http-1.33.1.jar
-file.reference.mysql-connector-j-9.3.0.jar=..\\lib_jar\\mysql-connector-j-9.3.0.jar
-junit.selected.version=4
-file.reference.google-api-client-1.32.1.jar=..\\lib_jar\\google-api-client-1.32.1.jar
-resource.dir=setup
-source.encoding=UTF-8
-includes=**
-jar.compress=false
-javadoc.nonavbar=false
-annotation.processing.processors.list=
-javac.deprecation=false
-file.reference.javase-3.5.3.jar=..\\lib_jar\\javase-3.5.3.jar
-file.reference.jaxb-api-2.1.jar=..\\lib_jar\\jaxb-api-2.1.jar
-file.reference.jackson-databind-2.19.0-rc2.jar=..\\lib_jar\\jackson-databind-2.19.0-rc2.jar
-file.reference.google-api-services-sheets-v4-rev614-1.18.0-rc.jar=..\\lib_jar\\google-api-services-sheets-v4-rev614-1.18.0-rc.jar
-build.generated.sources.dir=${build.dir}/generated-sources
-dist.war=${dist.dir}/${war.name}
-javadoc.splitindex=true
-war.content.additional=
-file.reference.poi-ooxml-3.16.jar=..\\lib_jar\\poi-ooxml-3.16.jar
-javadoc.encoding=${source.encoding}
-file.reference.google-oauth-client-1.39.0.jar=..\\lib_jar\\google-oauth-client-1.39.0.jar
-file.reference.jaxb-runtime-2.3.1.jar=..\\lib_jar\\jaxb-runtime-2.3.1.jar
-javac.classpath=${file.reference.activation-1.1.1.jar}\:${file.reference.com.fasterxml.jackson.core.jar}\:${file.reference.com.fasterxml.jackson.databind.jar}\:${file.reference.commons-collections4-4.1.jar}\:${file.reference.commons-fileupload2-core-2.0.0-M2.jar}\:${file.reference.commons-logging-1.2.jar}\:${file.reference.core-3.4.1.jar}\:${file.reference.fluent-hc-4.5.13.jar}\:${file.reference.google-api-client-1.32.1.jar}\:${file.reference.google-api-client-2.7.2.jar}\:${file.reference.google-api-services-sheets-v4-rev614-1.18.0-rc.jar}\:${file.reference.google-auth-library-credentials-1.33.1.jar}\:${file.reference.google-auth-library-oauth2-http-1.33.1.jar}\:${file.reference.google-http-client-1.46.3.jar}\:${file.reference.google-http-client-jackson2-1.46.3.jar}\:${file.reference.google-oauth-client-1.39.0.jar}\:${file.reference.gson-2.9.0.jar}\:${file.reference.httpclient-4.5.13.jar}\:${file.reference.httpcore-4.4.13.jar}\:${file.reference.jackson-annotations-3.0-rc3.jar}\:${file.reference.jackson-core-2.19.0-rc2.jar}\:${file.reference.jackson-databind-2.18.3.jar}\:${file.reference.jackson-databind-2.19.0-rc2.jar}\:${file.reference.jakarta.jakartaee-api-8.0.0.jar}\:${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}\:${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}\:${file.reference.javase-3.5.3.jar}\:${file.reference.javax.activation-1.2.0.jar}\:${file.reference.javax.mail-1.6.2.jar}\:${file.reference.javax.mail-api-1.6.2.jar}\:${file.reference.javax.servlet-api-3.0.1.jar}\:${file.reference.jaxb-api-2.1.jar}\:${file.reference.jaxb-api-2.3.1.jar}\:${file.reference.jaxb-runtime-2.3.1.jar}\:${file.reference.json-20210307.jar}\:${file.reference.mail.jar}\:${file.reference.mysql-connector-j-9.3.0.jar}\:${file.reference.mysql-connector-java-8.0.17.jar}\:${file.reference.poi-3.15.jar}\:${file.reference.poi-ooxml-3.16.jar}\:${file.reference.poi-ooxml-schemas-3.16.jar}\:${file.reference.smtp-1.6.2.jar}\:${file.reference.xmlbeans-2.3.0.jar}
-file.reference.jakarta.jakartaee-api-8.0.0.jar=..\\lib_jar\\jakarta.jakartaee-api-8.0.0.jar
-build.classes.excludes=**/*.java,**/*.form
-j2ee.platform=10-web
-j2ee.server.type=Tomcat
-build.test.classes.dir=${build.dir}/test/classes
-file.reference.poi-ooxml-schemas-3.16.jar=..\\lib_jar\\poi-ooxml-schemas-3.16.jar
-build.test.results.dir=${build.dir}/test/results
-file.reference.google-http-client-jackson2-1.46.3.jar=..\\lib_jar\\google-http-client-jackson2-1.46.3.jar
-client.urlPart=
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.core-3.4.1.jar=..\\lib_jar\\core-3.4.1.jar
-file.reference.google-api-client-2.7.2.jar=..\\lib_jar\\google-api-client-2.7.2.jar
-file.reference.com.fasterxml.jackson.core.jar=..\\lib_jar\\com.fasterxml.jackson.core.jar
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-file.reference.fluent-hc-4.5.13.jar=..\\lib_jar\\fluent-hc-4.5.13.jar
-build.generated.dir=${build.dir}/generated
-file.reference.jackson-annotations-3.0-rc3.jar=..\\lib_jar\\jackson-annotations-3.0-rc3.jar
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-war.ear.name=${war.name}
-annotation.processing.run.all.processors=true
-src.dir=${file.reference.src-java}
-war.name=SWP_BL5_TEAM1.war
-debug.classpath=${build.classes.dir}\:${javac.classpath}
+webinf.dir=web/WEB-INF
