--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -60,4 +60,12 @@
         <servlet-name>ExaminationPackageManager</servlet-name>
         <url-pattern>/ExaminationPackageManager</url-pattern>
     </servlet-mapping>
+    <servlet>
+    <servlet-name>MedicalRecordsServlet</servlet-name>
+    <servlet-class>controller.doctor.MedicalRecordsServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+    <servlet-name>MedicalRecordsServlet</servlet-name>
+    <url-pattern>/doctor/medical-records</url-pattern>
+</servlet-mapping>
 </web-app>
