--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>QueueManager</servlet-name>
         <servlet-class>controller.doctor.QueueManager</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DoctorAppointmentDetail</servlet-name>
+        <servlet-class>controller.doctor.DoctorAppointmentDetail</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <url-pattern>/PatientBookAppointmentServlet</url-pattern>
@@ -67,5 +71,9 @@
     <servlet-mapping>
         <servlet-name>QueueManager</servlet-name>
         <url-pattern>/QueueManager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DoctorAppointmentDetail</servlet-name>
+        <url-pattern>/DoctorAppointmentDetail</url-pattern>
     </servlet-mapping>
 </web-app>
