--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -100,5 +100,24 @@
         <servlet-name>QueueManager</servlet-name>
         <url-pattern>/QueueManager</url-pattern>
     </servlet-mapping>
-
+    <servlet>
+        <servlet-name>MedicalRecordsServlet</servlet-name>
+        <servlet-class>controller.doctor.MedicalRecordsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MedicalRecordsServlet</servlet-name>
+        <url-pattern>/doctor/medical-records</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>PatientListServlet</servlet-name>
+        <servlet-class>controller.staff.PatientListServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PatientListServlet</servlet-name>
+        <url-pattern>/doctor/patients-list</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DoctorAppointmentDetail</servlet-name>
+        <url-pattern>/DoctorAppointmentDetail</url-pattern>
+    </servlet-mapping>
 </web-app>
